<resources>
    <string name="app_name">Общак</string>
    <string name="password">Пароль</string>
    <string name="mail">Почта</string>
    <string name="nick">Никнейм</string>
    <string name="log_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="accaunt_question">У Вас нет аккаунта? Зарегистрироваться!</string>
    <string name="nick_error">Никнейм должен быть длиннее двух символов</string>
    <string name="password_error">Пароль должен быть длиннее пяти символов</string>
    <string name="email_error">Некорректная почта</string>
    <string name="email_error_2">Аккаунт с данной почтой не существует</string>
    <string name="registration_error">Ошибка регистрации</string>
    <string name="registration_success">Регистрация прошла успешно!</string>
    <string name="login_error">Неверные логин или пароль</string>
    <string name="login_success">Добро пожаловать</string>
    <string name="reset_success">Форма для смены пароля отправленна на почту</string>
    <string name="reset_error">Ошибка! Попробуйте позже</string>
    <string name="connection_error">Ошибка соединения! Попробуйте позже</string>
    <string name="about_program">О программе</string>
    <string name="about_program_info">В разработке принимали участие:\nВологжанин Евгений\nНикольский Владислав\nШарипов Айнур\nЖучков Святослав\nЯдав Навин</string>
    <string name="close">Закрыть приложение</string>
    <string name="close2">Закрыть и выйти из аккаунта</string>
    <string name="close_question">Вы дейсвительно хотите выйти?</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="ok">ОК</string>
    <string name="reset_password">Забыл пароль… </string>
    <string name="reset_button">Отправить запрос!</string>
    <string name="quick_enter">Хотите ли вы войти как </string>
    <string name="user_general_text">Общее</string>
    <string name="user_contacts_text">Контакты </string>
    <string name="user_fullname_text">Полное имя</string>
    <string name="user_birthday_text">День рождения</string>
    <string name="user_city_text">Родной город</string>
    <string name="user_email_text">Почта</string>
    <string name="user_phonenumber_text">Номер телефона</string>
    <string name="user_hobby_text">Хобби</string>
    <string name="user_aboutmyself_text">О себе</string>
    <string name="user_adress_text">Адрес</string>
    <string name="user_language_text">Язык</string>
    <string name="user_quoto_text">Любимая цитата</string>
    <string name="user_film_text">Любимый фильм</string>
    <string name="user_book_text">Любимая книга</string>
    <string name="user_group_text">Любимая группа</string>
    <string name="user_politic_text">Политические предпочтения</string>
    <string name="user_work_text">Место работы/учебы</string>
    <string name="user_social_text">Соцсети</string>
    <string name="user_vk_text">ВКонтакте</string>
    <string name="user_instagram_text">Instagram</string>
    <string name="user_facebook_text">Facebook</string>
    <string name="user_profile_reduct_text">Редактировать</string>
    <string name="profile_title">Профиль</string>
    <string name="user_photo_name">Фотография</string>
    <string name="user_nick_name">Ник</string>
    <string name="user_twitter_text">Twitter</string>
    <string name="user_telegram_text">Telegram</string>
    <string name="user_skype_text">Skype</string>
    <string name="cansel">Отмена</string>
    <string name="reset">Сбросить</string>
    <string name="apply">принять</string>
    <string name="create_group_hint">Group title</string>
    <string name="create_chat_button_text">Create</string>
    <string name="message_hint">Message</string>
    <string name="create_chat_user_s_nickname">User\'s nickname</string>
    <string name="create_chat_add_user_button_text">Add</string>
    <string-array name="politics">
        <item></item>
        <item>Индифферентные</item>
        <item>Коммунистические</item>
        <item>Социалистические</item>
        <item>Умеренные</item>
        <item>Либеральные</item>
        <item>Консервативные</item>
        <item>Монархические</item>
        <item>Ультроконсервативные</item>
        <item>Либертарианские</item>
    </string-array>
</resources>
